# arcann_training

./: .pre-commit-config.yaml  .ruff.toml  README.md  index.html  pyproject.toml
.github/workflows/: unittests_matrix.yml
arcann_training/: __main__.py
arcann_training/assets/: default_config.json
arcann_training/common/: dataset.py  lammps.py  utils.py  yaml.py
arcann_training/exploration/: check.py  clean.py  deviate.py  extract.py  lammps.py  launch.py  prepare.py  utils.py
arcann_training/initialization/: start.py  transition.py  utils.py
arcann_training/labeling/: check.py  clean.py  extract.py  launch.py  prepare.py
arcann_training/test/: check.py  clean.py  launch.py  prepare.py
arcann_training/training/: check.py  check_compress.py  check_freeze.py  clean.py  compress.py  freeze.py  increment.py  launch.py  prepare.py  utils.py
arcann_training/unittests/: test_check.py  test_utils_exploration.py  test_utils_initlialization.py  test_utils_training.py
examples/inputs/: training.json
examples/user_files/exploration_lammps/: MACE.in
examples/user_files/job_exploration_lammps_slurm/: job-array_lammps-mace_explore_gpu_myHPCkeyword1.sh  job_lammps-mace_explore_gpu_myHPCkeyword1.sh
examples/user_files/job_training_mace_slurm/: job_mace_compress_gpu_myHPCkeyword1.sh  job_mace_train_gpu_myHPCkeyword1.sh
examples/user_files/training_mace/: training_0.13.yaml
