[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arcann_training"
version = "2.0.0"
description = "An automated enhanced sampling generation of training sets for chemically reactive machine learning interatomic potentials"
authors = [{name = "Theoretical Chemistry Group - ENS"}]
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
dependencies = ["numpy>=1.15", "pyyaml>=3.13"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Intended Audience :: Science/Research",
]

[project.urls]
Repository = "https://github.com/arcann-chem/arcann_training"
Documentation = "https://arcann-chem.github.io/arcann_training/"

# [project.scripts]
# arcann = "arcann_training:main"

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "pre-commit>=4.2.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "reuse>=5.0.2",
    "ruff>=0.11.13",
]
