[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arcann_training"
version = "2.0.0"
description = "An automated enhanced sampling generation of training sets for chemically reactive machine learning interatomic potentials"
authors = [{name = "Theoretical Chemistry Group - ENS"}]
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
dependencies = [
    "ase>=3.27.0",
    "numpy>=1.15",
    "pyyaml>=3.13",
    "strenum>=0.4.15 ; python_full_version == '3.10.*'",
]
classifiers = [
    "Intended Audience :: Science/Research",
]

[project.urls]
Repository = "https://github.com/arcann-chem/arcann_training"
Documentation = "https://arcann-chem.github.io/arcann_training/"

[project.optional-dependencies]
mace = [
    "mace-torch>=0.3.14",
]
mace-mliap = [
    "arcann_training[mace]",
    "cuequivariance-torch>=0.8.1",
]
symmetrix = [
    "arcann_training[mace]",
    "symmetrix @ git+https://github.com/wcwitt/symmetrix.git@main#subdirectory=symmetrix",
]

# [project.scripts]
# arcann = "arcann_training:main"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]

[tool.uv.sources]
symmetrix = { git = "https://github.com/wcwitt/symmetrix.git", subdirectory = "symmetrix" }

[tool.hatch.metadata]
allow-direct-references = true
